Profile: Fix bio overflow (#1688)

--- a/src/components/right/management/Management.scss
+++ b/src/components/right/management/Management.scss
@@ -215,6 +215,10 @@
   .create-link {
     margin-bottom: 0.5rem;
   }
+
+  .invite-title {
+    white-space: nowrap;
+  }
 }
 
 .ManageInvite {
